feat: Load port config from .env.development, defaults to 3000/3001
- start-full-stack.sh loads FRONTEND_PORT and BACKEND_PORT from .env.development
- Falls back to defaults (3000 frontend, 3001 backend) if .env.development not present
- .env.development now uses 3010/3020 as custom development ports
- Frontend proxy updated to 3020 (matches .env.development BACKEND_PORT)
- All scripts updated with correct defaults

--- a/config/environments/.env.development
+++ b/config/environments/.env.development
@@ -2,12 +2,12 @@
 NODE_ENV=development
 
 # Database Configuration
-DATABASE_URL=postgresql://mandrel@localhost:5432/aidis_production
-DATABASE_USER=mandrel
+DATABASE_URL=postgresql://truecode@localhost:5432/aidis_production
+DATABASE_USER=truecode
 DATABASE_HOST=localhost
 DATABASE_NAME=aidis_production
 DATABASE_PORT=5432
-DATABASE_PASSWORD=mandrel
+DATABASE_PASSWORD=truecode
 
 # Authentication
 JWT_EXPIRES_IN=24h
@@ -20,7 +20,7 @@ MANDREL_MCP_BRIDGE_PORT=8081
 MANDREL_MCP_PORT=8080
 
 # CORS (development)
-CORS_ORIGIN=http://localhost:3000,http://localhost:3001
+CORS_ORIGIN=http://localhost:3001,http://localhost:3002
 
 # Logging (development - verbose)
 LOG_LEVEL=debug
@@ -36,7 +36,7 @@ FEATURE_FLAG_PHASE1_CONTRACT_TESTS=false
 FEATURE_FLAG_PHASE1_REACT_ERROR_BOUNDARIES=false
 
 # Additional development settings
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:3001
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 MAX_FILE_SIZE=10485760
