--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.18.1",
     "@xenova/transformers": "^2.17.2",
+    "bullmq": "^5.34.8",
     "dotenv": "^16.4.0",
     "dotenv-safe": "^9.1.0",
     "express": "^5.1.0",
@@ -65,9 +66,9 @@
     "nearley": "^2.20.1",
     "pg": "^8.12.0",
     "pgvector": "^0.2.0",
+    "sharp": "^0.34.5",
     "simple-git": "^3.28.0",
     "umap-js": "^1.4.0",
-    "zod": "^3.25.76",
-    "bullmq": "^5.34.8"
+    "zod": "^3.25.76"
   }
 }
