feat: add delete tools for projects, contexts, tasks, decisions with projectId isolation

--- a/.gitignore
+++ b/.gitignore
@@ -163,6 +163,9 @@ deps.json
 fixed-tool-list.js
 logging-config.env
 
+# Fork-specific work (local analysis, investigation, documentation)
+.fork/
+
 # Personal projects - not part of AIDIS
 projects/
 forge-web/
